--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,94 @@
+# IDE and editor folders
+.idea/
+*.iml
+.vscode/
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Python-specific
 __pycache__/
 *.py[cod]
+*$py.class
+
+# pyenv
+.python-version
+
+# Flask stuff:
+instance/
+.webassets-cache
+
+# Others
+*.log
+*.sql
+*.sqlite
+*.sqlite3
+*.tar.gz
+*.zip
+*.rar
+*.7z
+*.gz
+*.bzip2
+*.tmp
+*.bak
+*.swp
+*.swo
+*.xls
+*.xlsx
+*.csv
+*.sav
+*.sas
+*.sastmp
+*.sas7bdat
+*.sas7bcat
+*.sas7bput
+*.sas7bpgm
+*.sas7bdmd
+*.sas7bdat
+*.sas7bndx
+*.sas7bvue
+*.sas7bfdb
+*.sas7bitm
+*.sas7butl
+*.dat
+*.out
+*.mdb
+*.ora
+*.dbf
+*.odb
+*.db
+*.frm
+*.myd
+*.myi
+*.ibd
+*.mdf
+*.ldf
+*.sdf
+*.sqlite
+*.fmp12
+*.fp7
+*.accdb
+*.pdb
+*.mdb
+*.sqlitedb
+*.db-shm
+*.db-wal
+*.log
+*.tmp
+*.temp
+*.t
+*.bak
+*.old
+*.backup
+*.sav
+*.save
+*.memo
+*.properties
+*.ics
+*.
